# mimo_xtrx_sdr

./: CMakeLists.txt  README.md  main.cpp  sdr_util.cpp  sdr_util.hpp
test_signal/: CMakeLists.txt  test.cpp  test.hpp
